Fix login overflow

--- a/app/src/style/login.scss
+++ b/app/src/style/login.scss
@@ -9,6 +9,7 @@
 	@include theme.theme;
 
 	color: theme.$text-secondary;
+  min-height: 36.5rem;
 
 	& .cds--form-item {
 		min-height: 84px;
